<resources>
    <string name="app_name">Imc App</string>

    <string name="login_titulo">Login</string>
    <string name="login_subtitulo">Faça login para continuar</string>
    <string name="login_et_email">E-mail</string>
    <string name="login_et_senha">Senha</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_lembrar_me">Lembrar-me</string>
    <string name="login_esqueci">Esqueci a senha</string>
    <string name="login_nao_tem_conta">Não tem uma conta?</string>
    <string name="login_criar_conta">Criar uma conta agora</string>
    <string name="cadastro_nome">Nome</string>
    <string name="cadastro_profissao">Profissão</string>
    <string name="cadastro_altura">Altura</string>
    <string name="cadastro_data_nascimento">Data de Nascimento</string>
    <string name="cadastro_sexo">Sexo</string>
    <string name="cadastro_sexo_feminino">Feminino</string>
    <string name="cadastro_sexo_masculino">Masculino</string>
    <string name="cadastro_title_dados_autenticacao">Dados para Autenticação</string>
    <string name="cadastro_title_dados_pessoais">Dados Pessoais</string>
    <string name="cadastro_menu_label">Criar conta</string>
    <string name="dashboard_imc">IMC</string>
    <string name="dashboard_ncd">NCD</string>
    <string name="dashboard_idade">Idade</string>
    <string name="dashboard_peso">Peso</string>
    <string name="dashboard_altura">Altura</string>
    <string name="dashboard_nome">Megan Fox</string>
    <string name="dashboard_profissao">Atriz</string>
    <string name="dashboard_title_card_pesar">Pesar Agora</string>
    <string name="dashboard_subtitle_card_pesar">Mantenha seu peso atualizado</string>
    <string name="dashboard_title_card_historico">Histórico</string>
    <string name="dashboard_subtitle_card_historico">Reveja suas conquistas</string>
    <string name="login_title_app">HEALTH
        CALC</string>
    <string name="novopeso_vamos_nos_pesar">Vamos nos pesar?</string>
    <string name="novo_peso_subtitulo">Mantenha seu peso sempre atualizado, assim você poderá acompanhar sua evolução</string>
    <string name="novo_peso_dados_da_sua_pesagem">Dados da sua pesagem</string>
    <string name="novo_peso_data_da_pesagem">Data da pesagem:</string>
    <string name="novo_peso_nivel_de_atividade">Nível de atividade:</string>
    <string name="seu_novo_peso">Seu novo peso:</string>
    <string name="novo_peso_button_registrar">Registrar</string>
    <string-array name="atividades">
        <item>Atividade Leve</item>
        <item>Atividade Moderada</item>
        <item>Atividade Intensa</item>
    </string-array>

</resources>