<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoardActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dash_board_background"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/megan"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tv_nome_dash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white"

            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
        <TextView
            android:id="@+id/tv_profissao_dash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center_horizontal"

            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginBottom="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_imc_dash"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="25.7"
                android:textAppearance="@style/dashboard_values"/>
            <TextView
                android:id="@+id/tv_ncd_dash"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="1980"
                android:textColor="@color/white"
                android:textAppearance="@style/dashboard_values"/>
            <TextView
                android:id="@+id/tv_idade_dash"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="44"
                android:textColor="@color/white"
                android:textAppearance="@style/dashboard_values"/>
            <TextView
                android:id="@+id/tv_peso_dash"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="55"
                android:textColor="@color/white"
                android:textAppearance="@style/dashboard_values"/>
            <TextView
                android:id="@+id/tv_altura_dash"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"

                android:textColor="@color/white"
                android:textAppearance="@style/dashboard_values"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_imc"
                android:textAppearance="@style/dashboard_labels"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_ncd"
                android:textColor="@color/white"
                android:textAppearance="@style/dashboard_labels"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_idade"
                android:textColor="@color/white"
                android:textAppearance="@style/dashboard_labels"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_peso"
                android:textColor="@color/white"
                android:textAppearance="@style/dashboard_labels"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_altura"
                android:textColor="@color/white"
                android:textAppearance="@style/dashboard_labels"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="81dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="10dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_balanca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/balanca"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/iv_balanca"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/card_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_title_card_pesar"
                        android:textAppearance="@style/card_titulo"/>
                    <TextView
                        android:id="@+id/card_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_subtitle_card_pesar"/>

                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="81dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="10dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_grafico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/grafico"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/iv_grafico"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/card_title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_title_card_historico"
                        android:textAppearance="@style/card_titulo"/>
                    <TextView
                        android:id="@+id/card_subtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_subtitle_card_historico"/>

                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>